--- a/learners.html
+++ b/learners.html
@@ -35,7 +35,7 @@
 
 My hope is that everyone can find something interesting in this video series, but you can pick your pathway based on your mathematical background and interests.
 
-So far, I've run this workshop with groups of high school students, college students, PhD students, and even mathematics professors.  I've also run it with contemporary dancers, puppeteers, and game developers, who have had little formal mathematics training after high school.
+So far, I've run this workshop with groups of high school students, college students, PhD students, and even mathematics professors.  I've also run it with contemporary dancers, puppeteers, and designers, who have had little formal mathematics training after high school.
 
 In <a href="./lesson-1.html" style="margin: 0;">Lesson One</a>, we explore basic properties of spatial orientations and rotations.  If you're already familiar with 3-D rotations, or if you're eager to get to the movement-based puzzles, you can safely skip this section.
 
