--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@ This current video series is an experiment  aiming to bring that sense of discov
 
 
 
-# Credits
+#  Acknowledgments
 
 Several others helped with the introduction video: the movement demonstrations were done by Aditi Bheda and Sharan Devkar Shankar, the background art was done by Pranav Sreerag, and the cinematography was done by Sharan Devkar Shankar and Sushmita Venugopalan.  Everything (with the exception of the string trick) was filmed at the NPTEL studio at IIT Madras, with help from Ravichandran.
 
