--- a/about.html
+++ b/about.html
@@ -33,8 +33,7 @@
 <br>
 
 
-I’ve long been fascinated by the string trick, demonstrated in the introduction video, and for years I've been wanting to put together an explainer on it. 
-
+I’ve long been fascinated by the string trick, demonstrated in the introduction video, and the origin of this entire series can be traced to this mystery at the heart of our daily lives.
 
 
 But the real impulse for this series emerged in 2019 during a theater workshop by the group <a href="https://en.wikipedia.org/wiki/Kalakshetra_Manipur" style="margin: 0;">Kalakshetra Manipur</a>.  Their performance tradition is based on the idea that many natural body movements are based on *figure-8* motions, and that figure-8 movements allow us to smoothly transition from movement to stillness.  This idea struck me as a  very nice way to describe the homotopy in SO(3) from a 720° loop to a stationary loop.  
