Suggested wording change
"Both of the above" seemed a bit off because there are three answers above.

--- a/lesson-1.html
+++ b/lesson-1.html
@@ -203,7 +203,7 @@ When exploring the set of <i>all</i> spatial orientations, one of the most basic
     },
     {
       correct: true,
-      answer: `Both of the above!`,
+      answer: `The second and third answers are both correct!`,
       response: `Correct!  It seems *unique* 'orientation coordinates' are not so easy to construct...I suppose we just have to live with some redundancy!`
     }
   ]">
