fixed errors in video 3a
and updated video link

--- a/lesson-3.html
+++ b/lesson-3.html
@@ -40,7 +40,7 @@ The quaternions give us a symbolic language for writing down all of our discover
 
 <div class="video-container">
   <iframe
-      src="https://www.youtube.com/embed/ql-HM9L9MEI"
+      src="https://www.youtube.com/embed/tMyg9XH8MjU"
       width="700"
       height="480"
       frameborder="0"
