improved lesson 2, exercise 2

--- a/lesson-2.html
+++ b/lesson-2.html
@@ -178,12 +178,12 @@ Remember, a <i>loop</i> in orientation space is a movement sequence that finishe
   </iframe>
 </div>
 
-<md>
-  <br>
-At every instant of the time, as θ goes from 0 to 2𝝿, the trivial loop's orientation can be achieved via a composition of two rotations:
-</md>
 
-<mcq-pictorial label="Exercise 2" palette="past" :images="[`./images/hint.gif`]" question="What spatial orientation do we achieve if we perform a 270° y-rotation followed by a 270° (-x)-rotation?" :choices="[
+
+
+
+
+<mcq-pictorial label="Exercise 2" palette="past" :images="[`./images/tracking-exercise-2.png`]" question="What spatial orientation do we achieve if we perform a 270° y-rotation followed by a 270° (-x)-rotation?" :choices="[
     {
       correct: false,
       answer: `A`,
@@ -210,6 +210,14 @@ At every instant of the time, as θ goes from 0 to 2𝝿, the trivial loop's ori
     }
   ]">
 </mcq-pictorial>
+
+<md>
+At every instant of the time, as θ goes from 0 to 2𝝿, the trivial loop's orientation can be achieved via a composition of two rotations:
+</md>
+
+<div class="exercise-box past" >
+ <img src="./images/hint.gif" class="exercise-image shrinkToFit" width="70%">
+</div>
 
 <md>
 Somehow, performing two nontrivial loops <i>simultaneously</i> results in a trivial loop.  What's more, if we <i>concatenate</i> two nontrivial loops, performing one after the other, the result is once again a trivial loop!
