--- a/lesson-3.html
+++ b/lesson-3.html
@@ -32,7 +32,9 @@
 
 In this third lesson, we introduce the quaternion number system, an extension of the real numbers whose algebraic structure perfectly captures the behavior of spatial rotations.  
 
-The quaternions give us a symbolic language for writing down all of our discoveries from the previous lessons, and will help us discover new relationships that are virtually impossible to discover purely through movement.
+The quaternions give us a symbolic language for writing down all of our discoveries from the previous lessons, and will help us discover new relationships that are virtually impossible to discover purely through movement.  
+
+<!--From here on we'll assume some additional mathematical experience: namely, some familiarity with complex numbers, rotation matrices, and matrix multiplication.-->
 
 </md>
 
