--- a/lesson-4.html
+++ b/lesson-4.html
@@ -32,7 +32,9 @@
 
 In this fourth lesson, we tie up several loose ends.  First we use quaternions to parametrize the various loops and homotopies from Lesson Two. We then meet a virtual avatar of Bala, built in the open-source 3-D animation software Blender, who can read and perform all our previous discoveries, now in quaternion form.
 
-We then look at how quaternions act on R³ as spatial rotations, via a surprisingly simple formula for the image of a point (x, y, z) under a quaternion rotation q.  Finally, using Blender, we get a glimpse of the relations between infinitesimal rotations - also known as the <i>Lie bracket</i> on the Lie algebra of SO(3).  
+We then look at how quaternions act on R³ as spatial rotations, via a surprisingly simple formula for the image of a point (x, y, z) under a quaternion rotation q.  Finally, using Blender, we get a glimpse of the relations between infinitesimal rotations - also known as the <i>Lie bracket</i> on the Lie algebra of SO(3). 
+
+<!--Note that this lesson will be more challenging mathematically: some comfort with functions of multiple variables will be useful.-->
 </md>
 
 <p> First, let's try paramtetrizing a simple 360° rotation loop:</p>
