updated Video 2F link
fixed ending of that video

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@ At the <a href="https://math.iitm.ac.in/public_html/forays/index.html" style="ma
 
 Since then, I've run several more in-person workshops, including for <a href="https://www.imsc.res.in/outreach/facets2022/" style="margin: 0;">Facets 2022 @IMSc</a>, and for the <a href="https://azimpremjiuniversity.edu.in/math-club" style="margin: 0;">Azim Premji University Math Club</a>. Each time new and exciting discoveries have been made, and it's been a lot of fun for everyone involved.  
 
-This current video series attemtps to bring that sense of discovery to the online medium.  It was created in collaboration with <a href="https://nptel.ac.in/" style="margin: 0;">NPTEL</a>, the online course platform of the Ministry of Education.
+This current video series attempts to bring that sense of discovery to the online medium.  It was created in collaboration with <a href="https://nptel.ac.in/" style="margin: 0;">NPTEL</a>, the online course platform of the Ministry of Education.
 
 
 
