--- a/lesson-2.html
+++ b/lesson-2.html
@@ -150,11 +150,11 @@ Remember, a <i>loop</i> in orientation space is a movement sequence that finishe
 </challenge>
 
 
-<p> Once you've enacted the gradual deformation of one 360° rotation loop to another, you can see proceed to the next challenge:</p>
+<p> Once you've enacted the gradual deformation of one 360° rotation loop to another, you can proceed to the next challenge:</p>
 
 <div class="video-container">
   <iframe
-      src="https://www.youtube.com/embed/UFy05eHrw9E"
+      src="https://www.youtube.com/embed/rFHGn1OLp0M"
       width="700"
       height="480"
       frameborder="0"
