--- a/lesson-4.html
+++ b/lesson-4.html
@@ -37,7 +37,7 @@ We then look at how quaternions act on R³ as spatial rotations, via a surprisin
 <!--Note that this lesson will be more challenging mathematically: some comfort with functions of multiple variables will be useful.-->
 </md>
 
-<p> First, let's try paramtetrizing a simple 360° rotation loop:</p>
+<p> First, let's try parametrizing a simple 360° rotation loop:</p>
 
 <div class="video-container">
   <iframe
